syntax = "proto3";
package axelarnet.v1beta1;

option go_package = "github.com/axelarnetwork/axelar-core/x/axelarnet/types";
import "gogoproto/gogo.proto";
import "cosmos/base/v1beta1/coin.proto";

option (gogoproto.goproto_getters_all) = false;

message IBCTransfer {
  bytes sender = 1 [ (gogoproto.casttype) =
                         "github.com/cosmos/cosmos-sdk/types.AccAddress" ];
  string receiver = 2;
  cosmos.base.v1beta1.Coin token = 3 [ (gogoproto.nullable) = false ];
  string port_id = 4 [ (gogoproto.customname) = "PortID" ];
  string channel_id = 5 [ (gogoproto.customname) = "ChannelID" ];
  uint64 sequence = 6;
}

message CosmosChain {
  string name = 1;
  string ibc_path = 2 [ (gogoproto.customname) = "IBCPath" ];
  repeated string assets = 3;
  string addr_prefix = 4;
}
